# hashi

./: .containerignore  Cargo.toml  Makefile  README.md
.github/scripts/: install-sui.sh
.github/workflows/: ci.yml  frontend.yml  gh-pages.yml  guardian-enclave.yml
contracts/hashi/: Move.toml
crates/hashi/: Cargo.toml
crates/hashi-btc/: Cargo.toml
crates/hashi-btc/examples/: testnet_monitor.rs
crates/hashi-btc/src/: config.rs  lib.rs  monitor.rs
crates/hashi-guardian/: Cargo.toml  README.md
crates/hashi-guardian-enclave/: Cargo.toml
crates/hashi-guardian-enclave/src/: getters.rs  heartbeat.rs  init.rs  lib.rs  main.rs  rpc.rs  s3_logger.rs  setup.rs  withdraw.rs
crates/hashi-guardian-shared/: Cargo.toml
crates/hashi-guardian-shared/src/: bitcoin_utils.rs  crypto.rs  epoch_store.rs  lib.rs  proto_conversions.rs  s3_logger.rs  test_utils.rs
crates/hashi-guardian/src/: getters.rs  heartbeat.rs  init.rs  lib.rs  main.rs  rpc.rs  s3_logger.rs  setup.rs  withdraw.rs
crates/hashi-monitor/: Cargo.toml  README.md  config.sample.yaml
crates/hashi-monitor/src/: config.rs  domain.rs  errors.rs  main.rs  state_machine.rs
crates/hashi-monitor/src/audit/: batch.rs  continuous.rs  mod.rs
crates/hashi-monitor/src/kp/: config.rs  heartbeat_checks.rs  mod.rs
crates/hashi-monitor/src/rpc/: btc.rs  guardian.rs  mod.rs
crates/hashi-screener/: Cargo.toml
crates/hashi-screener/src/: main.rs  merkle.rs
crates/hashi-types/: Cargo.toml
crates/hashi-types/proto/sui/hashi/v1alpha/: bridge_service.proto  guardian_service.proto  mpc_service.proto  utxo.proto
crates/hashi-types/src/: bitcoin_txid.rs  committee.rs  lib.rs  telemetry.rs
crates/hashi-types/src/guardian/: bitcoin_utils.rs  enclave_state.rs  limiter.rs  mod.rs  proto_conversions.rs  s3_utils.rs  test_utils.rs  time_utils.rs
crates/hashi-types/src/move_types/: mod.rs
crates/hashi/examples/: testnet_monitor.rs
crates/hashi/proto/sui/hashi/v1alpha/: dkg_service.proto  gaurdian_service.proto  signature.proto  utxo.proto
crates/hashi/src/: bls.rs  committee.rs  config.rs  constants.rs  db.rs  deposits.rs  epoch_storage.rs  leader.rs  lib.rs  main.rs  metrics.rs  mpc.rs  publish.rs  storage.rs  sui_tx_executor.rs  withdrawals.rs
crates/hashi/src/btc_monitor/: config.rs  mod.rs  monitor.rs
crates/hashi/src/cli/: client.rs  config.rs  mod.rs  types.rs
crates/hashi/src/cli/commands/: committee.rs  config.rs  deposit.rs  mod.rs  proposal.rs  withdraw.rs
crates/hashi/src/communication/: in_memory.rs  interfaces.rs  mod.rs  sui_tob.rs  timeout_and_retry.rs
crates/hashi/src/dkg/: mod.rs  rpc_proto_conversions.rs  types.rs
crates/hashi/src/dkg/rpc/: client.rs  p2p_channel.rs  proto_conversions.rs  service.rs
crates/hashi/src/grpc/: bridge_service.rs  client.rs  metrics_layer.rs  mod.rs
crates/hashi/src/leader/: garbage_collection.rs  mod.rs  retry.rs
crates/hashi/src/mpc/: mpc_except_signing.rs  mpc_except_signing_tests.rs  service.rs  signing.rs  types.rs
crates/hashi/src/mpc/rpc/: p2p_channel.rs  proto_conversions.rs  service.rs
crates/hashi/src/onchain/: events.rs  mod.rs  move_types.rs  types.rs  watcher.rs
crates/hashi/src/storage/: epoch_public_messages_store.rs  interfaces.rs
crates/hashi/src/utxo_pool/: mod.rs  sim.rs  tests.rs
crates/internal-tools/: Cargo.toml
crates/internal-tools/src/: dump_utxos.rs  key_recovery.rs  main.rs  sweep_utxos.rs  utxo_csv.rs
crates/test-networks/: Cargo.toml
crates/test-networks/src/: bitcoin_node.rs  deposit_flow.rs  hashi_network.rs  lib.rs  publish.rs  sui_network.rs
design/: 404.html  address-scheme.html  committee.html  config.html  custom-b5e46735.css  deposit.html  fees.html  governance-actions.html  guardian.html  index.html  limiter.html  mpc-protocol.html  print.html  reconfiguration.html  sanctions.html  searcher-c2a407aa.js  searchindex-de28791b.js  searchindex-f96e48bb.js  service.html  toc-29793ec6.js  toc.html  user-flows.html  withdraw.html
design/src/: config.md  deposit.md  fees.md  move-model-lifecycle.md  share-backup.md
docker/: Containerfile  build.sh
docker/hashi-guardian/: Containerfile  Makefile  run.sh  traffic_forwarder.py
docker/hashi-screener/: Containerfile  build.sh
frontend/: package.json  pnpm-lock.yaml
rustdoc/: crates.js  help.html  settings.html  src-files.js
rustdoc/e2e_tests/: all.html  index.html  sidebar-items.js  struct.TestNetworks.html  struct.TestNetworksBuilder.html
rustdoc/hashi/: all.html  index.html  sidebar-items.js  struct.Hashi.html  struct.ServerVersion.html
rustdoc/hashi_guardian/: all.html  constant.HEARTBEAT_INTERVAL.html  constant.HEARTBEAT_RETRY_INTERVAL.html  constant.MAX_HEARTBEAT_FAILURES_INTERVAL.html  index.html  sidebar-items.js
rustdoc/hashi_localnet/: all.html  enum.Commands.html  enum.KeygenCommands.html  fn.cli_config_path.html  fn.cmd_deposit.html  fn.cmd_faucet_btc.html  fn.cmd_faucet_sui.html  fn.cmd_info.html  fn.cmd_keygen.html  fn.cmd_mine.html  fn.cmd_start.html  fn.cmd_status.html  fn.cmd_stop.html  fn.main.html  fn.print_connection_details.html  fn.print_info.html  fn.print_success.html  fn.print_warning.html  fn.write_cli_config.html  fn.write_pem_to_disk.html  index.html  sidebar-items.js  struct.Cli.html  struct.LocalnetOpts.html  struct.LocalnetState.html
rustdoc/hashi_monitor/: all.html  index.html  sidebar-items.js  struct.OutputUTXO.html
rustdoc/hashi_screener/: all.html  index.html  sidebar-items.js
rustdoc/hashi_types/: all.html  index.html  sidebar-items.js
rustdoc/internal_tools/: all.html  enum.Commands.html  fn.main.html  index.html  sidebar-items.js  struct.Cli.html  struct.ConfigArgs.html
rustdoc/proto_build/: all.html  fn.main.html  index.html
rustdoc/search.index/: 0031da910840.js  004cdd591047.js  00732df6f5ca.js  008570d8275e.js  00ac64a0be1f.js  00b0e07cdd8b.js  00d24fd0f01d.js  00d8aad65630.js  00f6ecdda92e.js  010a5c4ba273.js  011652283057.js  0187141e13c8.js  019556122e8f.js  01b428fa6a53.js  01bd302ee00a.js  01d19dca9ea0.js  0200da707408.js  020758e304da.js  020b86881a6d.js  020b8a7ee58b.js  02192a804837.js  (+1180 more)
(+1082 files in other folders)
