[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
# sui sdk crates
sui-sdk-types = { git = "https://github.com/MystenLabs/sui-rust-sdk.git", rev = "b160100865f53f0ef8e9bc9c5ec51a74c2d2736a", features = ["serde", "hash"] }
sui-crypto = { git = "https://github.com/MystenLabs/sui-rust-sdk.git", rev = "b160100865f53f0ef8e9bc9c5ec51a74c2d2736a", features = ["ed25519", "secp256k1", "secp256r1", "pem"] }
sui-rpc = { git = "https://github.com/MystenLabs/sui-rust-sdk.git", rev = "b160100865f53f0ef8e9bc9c5ec51a74c2d2736a" }
sui-transaction-builder = { git = "https://github.com/MystenLabs/sui-rust-sdk.git", rev = "b160100865f53f0ef8e9bc9c5ec51a74c2d2736a" }

sui-http = "0.1.0"
bitcoin = { version = "0.32.7", features =["serde"] }
bitcoincore-rpc = "0.19.0"

# Dependencies for grpc and protobuf
tonic = { version = "0.14", features = ["zstd", "transport", "tls-webpki-roots"] }
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
tonic-health = "0.14"
tonic-reflection = "0.14"
bytes = { version = "1.5.0", features = ["serde"] }
tonic-rustls = "0.3.0"
protox = "0.9"
tonic-prost-build = "0.14"
walkdir = "2.5.0"

serde = "1.0.219"
serde_derive = "1.0.219"

axum = "0.8.4"
tower = "0.5.2"
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls"] }
tokio = { version = "1.46.1", features = ["full"] }
prometheus = "0.13.0"
tracing = "0.1.41"

clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.1"
tabled = "0.16"
anyhow = "1.0.98"
toml = "0.9.2"
futures = "0.3.31"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rustls = { version = "0.23.29", default-features = false, features = ["ring"] }
ed25519-dalek = { version = "2.2.0", features = ["pem", "pkcs8", "rand_core"] }
x509-parser = { version = "0.17.0", features = ["verify"] }
rcgen = "0.13"
blst = { version = "0.3.13" }

rand_core = { version = "0.6.4" }
base64ct = { version = "1.6.0", features = ["alloc"] }
serde_yaml = "0.9.34"
serde_json = "1.0.145"
fjall = { version = "3.0.0", features = ["bytes_1"] }
async-trait = "0.1"
thiserror = "1.0"
hex = "0.4"
bcs = "0.1.6"
rand = "0.8"
tap = "1.0.1"
backon = "1"
test-strategy = "0.4"
proptest = { version = "1.6.0", default-features = false, features = ["std"] }
tempfile = "3.23.0"

# fastcrypto
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto.git", rev = "8101176" }
fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto.git", rev = "8101176" }

# Sui monorepo deps
bin-version = { git = "https://github.com/MystenLabs/sui.git" }
prometheus-closure-metric = { git = "https://github.com/MystenLabs/sui.git" }
sui-futures = { git = "https://github.com/MystenLabs/sui.git" }
