[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
# sui sdk crates
sui-sdk-types = { git = "https://github.com/MystenLabs/sui-rust-sdk.git", rev = "210e734ab50ab9a562e9a8ecf2ff5cfdb8c0f1b1", features = ["serde", "hash"] }
sui-crypto = { git = "https://github.com/MystenLabs/sui-rust-sdk.git", rev = "210e734ab50ab9a562e9a8ecf2ff5cfdb8c0f1b1", features = ["ed25519", "secp256k1", "secp256r1", "pem"] }
sui-rpc = { git = "https://github.com/MystenLabs/sui-rust-sdk.git", rev = "210e734ab50ab9a562e9a8ecf2ff5cfdb8c0f1b1" }
sui-transaction-builder = { git = "https://github.com/MystenLabs/sui-rust-sdk.git", rev = "210e734ab50ab9a562e9a8ecf2ff5cfdb8c0f1b1" }

sui-http = "0.2.0"
bitcoin = { version = "0.32.8", features =["serde"] }
corepc-client = { version = "0.10.0", features = ["client-sync"] }
jsonrpc = "0.18.0"

# Dependencies for grpc and protobuf
tonic = { version = "0.14", features = ["zstd", "transport", "tls-webpki-roots"] }
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
tonic-health = "0.14"
tonic-reflection = "0.14"
bytes = { version = "1.5.0", features = ["serde"] }
tonic-rustls = "0.3.0"
protox = "0.9"
tonic-prost-build = "0.14"
walkdir = "2.5.0"

serde = "1.0.219"
serde_derive = "1.0.219"

axum = "0.8.4"
tower = "0.5.3"
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls"] }
tokio = { version = "1.46.1", features = ["full"] }
prometheus = "0.14"
tracing = "0.1.41"

clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.1"
tabled = "0.16"
anyhow = "1.0.98"
toml = "0.9.2"
futures = "0.3.31"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
# TODO: Switch back to a crates.io release once age 0.12+ is published.
# We pin to this specific commit because age 0.11.x depends on i18n-embed-fl 0.9.x,
# which has a non-determinism bug (HashMap iteration in the fl!() proc macro) that
# breaks reproducible builds. The fix landed in i18n-embed-fl 0.10.0, and this commit
# (from rage PR #584) is the first to pull it in via i18n-embed 0.16.
# Upstream issues: https://github.com/str4d/rage/issues/568
#                  https://github.com/kellpossible/cargo-i18n/issues/150
age = { git = "https://github.com/str4d/rage.git", rev = "92f437bc2a061312fa6633bb70c91eef91142fd4", features = ["cli-common", "plugin"] }
rust-embed = { version = "8", features = ["deterministic-timestamps"] }
rustls = { version = "0.23.29", default-features = false, features = ["ring"] }
ed25519-dalek = { version = "2.2.0", features = ["pem", "pkcs8", "rand_core"] }
x509-parser = { version = "0.17.0", features = ["verify"] }
rcgen = "0.13"
blst = { version = "0.3.13" }

rand_core = { version = "0.6.4" }
base64ct = { version = "1.6.0", features = ["alloc"] }
serde_yaml = "0.9.34"
serde_json = "1.0.145"
fjall = { version = "3.0.0", features = ["bytes_1"] }
async-trait = "0.1"
thiserror = "1.0"
hex = "0.4"
bcs = "0.1.6"
rand = "0.8"
tap = "1.0.1"
backon = "1"
test-strategy = "0.4"
proptest = { version = "1.6.0", default-features = false, features = ["std"] }
tempfile = "3.23.0"
jiff = "0.2"
tar = "0.4"

# fastcrypto
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto.git", rev = "d6539fd65ce7f9a5a786af3340e511b7dae454c1" }
fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto.git", rev = "d6539fd65ce7f9a5a786af3340e511b7dae454c1" }

# Sui monorepo deps
bin-version = { git = "https://github.com/MystenLabs/sui.git", rev = "77a42de4be99383b98518541e0c6002d720cafc8" }
prometheus-closure-metric = { git = "https://github.com/MystenLabs/sui.git", rev = "77a42de4be99383b98518541e0c6002d720cafc8" }
sui-futures = { git = "https://github.com/MystenLabs/sui.git", rev = "77a42de4be99383b98518541e0c6002d720cafc8" }

[profile.dev.package.blst]
opt-level = 2
[profile.dev.package.fastcrypto]
opt-level = 2
[profile.dev.package.fastcrypto-tbls]
opt-level = 2

[profile.dev]
codegen-units = 512

[profile.test]
codegen-units = 512
