[package]
name = "hashi-guardian-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
axum = "0.7"
tracing = "0.1.41"
serde_json = "1.0.143"
bcs = "0.1.6"

# Crypto dependencies
# Note: bitcoin v0.32.7 and k256 v0.13 both require rand_core 0.6.4
# hpke 0.13.0 uses rand 0.9 which conflicts - must use hpke 0.12.0
hpke = "0.12.0"
rand = "0.8.5"
rand_core = "0.6.4"
k256 = "0.13"
bitcoin = { version =  "0.32.7", features = ["serde"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
blake2 = "0.10"
ed25519-consensus = "2.1"
miniscript = "13.0.0"
fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto.git", rev = "f2deafa" }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto.git", rev = "f2deafa" }

[features]
test-utils = []
