[package]
name = "hashi-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
bitcoin.workspace = true
clap.workspace = true
hashi-types = { path = "../hashi-types" }
# enclave imported for s3 logger
hashi-guardian-enclave = { path = "../hashi-guardian-enclave" }
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
