[package]
name = "hashi-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
bitcoin.workspace = true
bitcoincore-rpc.workspace = true
clap.workspace = true
hashi-types = { path = "../hashi-types" }
# guardian imported for s3 logger
hashi-guardian = { path = "../hashi-guardian" }
hex.workspace = true
hpke = "0.12.0"
k256 = "0.13"
rand.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
e2e-tests = { path = "../e2e-tests" }
tempfile.workspace = true
