[package]
name = "hashi"
version = "0.0.0"
edition = "2024"

[dependencies]
sui-sdk-types = { version = "0.1", features = ["serde", "hash"] }
sui-crypto = { version = "0.1", features = ["ed25519", "secp256k1", "secp256r1", "pem"] }
sui-rpc = { version = "0.1" }
sui-http = "0.1.0"

# dependencies for the protobuf definitions
tonic = { version = "0.14", features = ["zstd", "transport", "tls-webpki-roots"] }
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
bytes = { version = "1.5.0", features = ["serde"] }

tonic-health = "0.14"
serde = "1.0.219"
serde_derive = "1.0.219"
tonic-reflection = "0.14"
axum = "0.8.4"
tower = "0.5.2"
tokio = { version = "1.46.1", features = ["full"] }
prometheus = "0.13.0"
tracing = "0.1.41"

bin-version = { git = "https://github.com/MystenLabs/sui.git" }
prometheus-closure-metric = { git = "https://github.com/MystenLabs/sui.git" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0.98"
toml = "0.9.2"
futures = "0.3.31"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rustls = { version = "0.23.29", default-features = false, features = ["ring"] }
ed25519-dalek = { version = "2.2.0", features = ["pem", "pkcs8", "rand_core"] }
tonic-rustls = "0.3.0"
x509-parser = { version = "0.17.0", features = ["verify"] }
rcgen = "0.13"
blst = { version = "0.3.13" }

rand_core = { version = "0.6.4" }
base64ct = { version = "1.6.0", features = ["alloc"] }

fjall = { version = "3.0.0-rc.6", features = ["bytes_1"] }

# DKG dependencies
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto.git", rev = "f2deafa" }
fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto.git", rev = "f2deafa", features = ["experimental"] }
async-trait = "0.1"
thiserror = "1.0"
hex = "0.4"
bcs = "0.1.6"
rand = "0.8"
tap = "1.0.1"
backon = "1"

[dev-dependencies]
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
test-strategy = "0.4"
proptest = { version = "1.6.0", default-features = false, features = ["std"] }
tracing-test = "0.2"
tempfile = "3.0"
