[package]
name = "hashi"
version = "0.0.0"
edition = "2024"

[dependencies]
sui-sdk-types.workspace = true
sui-crypto.workspace = true
sui-rpc.workspace = true
sui-http.workspace = true
sui-transaction-builder.workspace = true
sui-futures = { workspace = true }

hashi-types = { path = "../hashi-types" }

# Bitcoin dependencies
bitcoin.workspace = true
bitcoincore-rpc.workspace = true
bdk_chain = "0.23.1"
bdk_core = "0.6.1"
kyoto-cbf = "0.13.2"

# Dependencies for the protobuf definitions
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
prost-types.workspace = true
bytes.workspace = true

tonic-health.workspace = true
serde.workspace = true
serde_derive.workspace = true
tonic-reflection.workspace = true
axum.workspace = true
tower.workspace = true
tokio.workspace = true
prometheus.workspace = true
tracing.workspace = true

bin-version.workspace = true
prometheus-closure-metric.workspace = true
clap.workspace = true
colored.workspace = true
tabled.workspace = true
anyhow.workspace = true
toml.workspace = true
futures.workspace = true
tracing-subscriber.workspace = true
rustls.workspace = true
ed25519-dalek.workspace = true
tonic-rustls.workspace = true
x509-parser.workspace = true
rcgen.workspace = true
blst.workspace = true

rand_core.workspace = true
base64ct.workspace = true
serde_json.workspace = true

fjall.workspace = true

# DKG dependencies
fastcrypto.workspace = true
fastcrypto-tbls.workspace = true
async-trait.workspace = true
thiserror.workspace = true
hex.workspace = true
bcs.workspace = true
rand.workspace = true
tap.workspace = true
backon.workspace = true

[dev-dependencies]
ed25519-dalek.workspace = true
test-strategy.workspace = true
proptest.workspace = true
tracing-test = "0.2"
tempfile.workspace = true
