[package]
name = "internal-tools"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
hashi = { path = "../hashi" }
hashi-types = { path = "../hashi-types" }

fastcrypto.workspace = true
fastcrypto-tbls.workspace = true
sui-sdk-types.workspace = true

clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
hex.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
rand.workspace = true
