[package]
name = "internal-tools"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
hashi = { path = "../hashi" }
hashi-types = { path = "../hashi-types" }

fastcrypto.workspace = true
fastcrypto-tbls.workspace = true
sui-sdk-types.workspace = true

bitcoin.workspace = true

clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
hex.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
futures.workspace = true
csv = "1"
url = "2"
