[package]
name = "test-networks"
version = "0.0.0"
edition = "2024"

[dependencies]
hashi = { path = "../hashi" }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
prometheus = "0.13"
bitcoin = "0.32"
bitcoincore-rpc = "0.19"
tempfile = "3.0"
sui-rpc = "0.1"
sui-crypto = { version = "0.1", features = ["ed25519"] }
sui-sdk-types = "0.1"
base64ct = { version = "1.8.0", features = ["std"] }
serde_yaml = "0.9.34"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
futures = "0.3"
