[package]
name = "test-networks"
version = "0.0.0"
edition = "2024"

[dependencies]
bcs = "0.1"
fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto.git", rev = "cc67fd2" }
hashi = { path = "../hashi" }
hashi-btc = { path = "../hashi-btc" }
hashi-types = { path = "../hashi-types" }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
prometheus = "0.13"
bitcoin = "0.32"
bitcoincore-rpc = "0.19"
tempfile = "3.0"
sui-rpc = "0.2"
sui-crypto = { version = "0.2", features = ["ed25519"] }
sui-sdk-types = "0.2"
base64ct = { version = "1.8.0", features = ["std"] }
serde_yaml = "0.9.34"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
futures = "0.3"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
