[package]
name = "test-networks"
version = "0.0.0"
edition = "2024"

[dependencies]
hashi = { path = "../hashi" }
hashi-btc = { path = "../hashi-btc" }
hashi-screener = { path = "../hashi-screener", features = ["test-utils"] }
hashi-types = { path = "../hashi-types" }

sui-futures.workspace = true
anyhow.workspace = true
fastcrypto.workspace = true
tokio.workspace = true
tracing.workspace = true
prometheus.workspace = true
bitcoin.workspace = true
bitcoincore-rpc.workspace = true
tempfile.workspace = true
sui-rpc.workspace = true
sui-crypto.workspace = true
sui-sdk-types.workspace = true
base64ct.workspace = true
serde_yaml.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
reqwest = { workspace = true, features = ["json"] }

[dev-dependencies]
fastcrypto-tbls.workspace = true
rand.workspace = true
tracing-subscriber.workspace = true
